[gd_scene load_steps=16 format=3 uid="uid://coabno8t3hu8h"]

[ext_resource type="Script" path="res://animation_player_test.gd" id="1_aq35j"]
[ext_resource type="Texture2D" uid="uid://ulgy8a7cxm84" path="res://art/character art/Individual Pieces/MODSparkStriker.png" id="3_ib3le"]
[ext_resource type="Texture2D" uid="uid://bjhrb70wv76v7" path="res://art/character art/Individual Pieces/MODBase.png" id="4_j2fj2"]
[ext_resource type="Texture2D" uid="uid://c6ophymw7rbhb" path="res://art/character art/Individual Pieces/MODRedDead.png" id="5_kfyas"]
[ext_resource type="AudioStream" uid="uid://bpy3ruvu0e5yn" path="res://art/sound/general sfx/explode_2.wav" id="6_e5g2y"]
[ext_resource type="AudioStream" uid="uid://b4ahpjq7pop6y" path="res://art/sound/general sfx/hurt.wav" id="7_sjdkw"]

[sub_resource type="Animation" id="Animation_6erjv"]
resource_name = "Attack"
length = 1.2
step = 0.15
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.14286),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_fax1x"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.15

[sub_resource type="Animation" id="Animation_pdl5p"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ua0bx"]
_data = {
"Attack": SubResource("Animation_6erjv"),
"Idle": SubResource("Animation_fax1x"),
"RESET": SubResource("Animation_pdl5p")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_y1gb5"]
atlas = ExtResource("5_kfyas")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Gradient" id="Gradient_kkc4u"]
offsets = PackedFloat32Array(0, 0.631148, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_6myxw"]
atlas = ExtResource("5_kfyas")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3n7d"]
atlas = ExtResource("5_kfyas")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m167p"]
atlas = ExtResource("5_kfyas")
region = Rect2(96, 0, 32, 32)

[node name="Player_Body" type="Node2D"]
script = ExtResource("1_aq35j")
metadata/_edit_lock_ = true

[node name="Bodyparts" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Larm_Joint" type="Marker2D" parent="Bodyparts"]
unique_name_in_owner = true
position = Vector2(27, -15)
metadata/_edit_lock_ = true

[node name="Larm" type="Sprite2D" parent="Bodyparts/Larm_Joint"]
position = Vector2(9, 68)
scale = Vector2(5, 5)
texture = ExtResource("3_ib3le")
hframes = 4
frame = 2

[node name="Torso_Location" type="Marker2D" parent="Bodyparts"]
unique_name_in_owner = true
position = Vector2(-9, 23)
metadata/_edit_lock_ = true

[node name="BaseTorso" type="Sprite2D" parent="Bodyparts/Torso_Location"]
scale = Vector2(5, 5)
texture = ExtResource("4_j2fj2")
hframes = 4
frame = 1

[node name="Torso_Joint" type="Marker2D" parent="Bodyparts/Torso_Location"]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="Torso" type="Sprite2D" parent="Bodyparts/Torso_Location/Torso_Joint"]
position = Vector2(-10, -35)
scale = Vector2(5, 5)
texture = ExtResource("3_ib3le")
hframes = 4
frame = 1

[node name="Legs_Joint" type="Marker2D" parent="Bodyparts"]
unique_name_in_owner = true
position = Vector2(-9, 78)
metadata/_edit_lock_ = true

[node name="Legs" type="Sprite2D" parent="Bodyparts/Legs_Joint"]
position = Vector2(4, 30)
scale = Vector2(5, 5)
texture = ExtResource("3_ib3le")
hframes = 4
frame = 3

[node name="Head_Joint" type="Marker2D" parent="Bodyparts"]
unique_name_in_owner = true
position = Vector2(-6, -30)
metadata/_edit_lock_ = true

[node name="Head" type="Sprite2D" parent="Bodyparts/Head_Joint"]
position = Vector2(-8, -57)
scale = Vector2(5, 5)
texture = ExtResource("3_ib3le")
hframes = 4

[node name="RArm_Joint" type="Marker2D" parent="Bodyparts"]
unique_name_in_owner = true
position = Vector2(-43, -15)
metadata/_edit_lock_ = true

[node name="Rarm" type="Sprite2D" parent="Bodyparts/RArm_Joint"]
position = Vector2(-11, 68)
scale = Vector2(5, 5)
texture = ExtResource("3_ib3le")
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ua0bx")
}

[node name="Head" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 1)
emitting = false
amount = 1
lifetime = 1.25
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
fixed_fps = 30
texture = SubResource("AtlasTexture_y1gb5")
direction = Vector2(0, -1)
spread = 58.18
initial_velocity_min = 505.37
initial_velocity_max = 774.2
angular_velocity_min = -87.27
angular_velocity_max = 116.36
damping_min = 15.493
damping_max = 30.986
scale_amount_min = 5.0
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_kkc4u")
anim_offset_max = 1.0

[node name="Torso" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 1
lifetime = 1.25
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
fixed_fps = 30
texture = SubResource("AtlasTexture_6myxw")
direction = Vector2(0, -1)
spread = 58.18
initial_velocity_min = 505.37
initial_velocity_max = 774.2
angular_velocity_min = -87.27
angular_velocity_max = 116.36
damping_min = 15.493
damping_max = 30.986
scale_amount_min = 5.0
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_kkc4u")
anim_offset_max = 1.0

[node name="Arms" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 1
lifetime = 1.25
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
fixed_fps = 30
texture = SubResource("AtlasTexture_c3n7d")
direction = Vector2(0, -1)
spread = 58.18
initial_velocity_min = 505.37
initial_velocity_max = 774.2
angular_velocity_min = -87.27
angular_velocity_max = 116.36
damping_min = 15.493
damping_max = 30.986
scale_amount_min = 5.0
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_kkc4u")
anim_offset_max = 1.0

[node name="Legs" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 1
lifetime = 1.25
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
fixed_fps = 30
texture = SubResource("AtlasTexture_m167p")
direction = Vector2(0, -1)
spread = 58.18
initial_velocity_min = 505.37
initial_velocity_max = 774.2
angular_velocity_min = -87.27
angular_velocity_max = 116.36
damping_min = 15.493
damping_max = 30.986
scale_amount_min = 5.0
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_kkc4u")
anim_offset_max = 1.0

[node name="Audio" type="Node" parent="."]

[node name="Explode" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("6_e5g2y")
volume_db = 4.0
bus = &"Reverb"

[node name="Hurt" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("7_sjdkw")
volume_db = 3.0
bus = &"SFX"
